# python-jsonconversion

./: .buildbot.yaml  .gitignore  .update-copyright.conf  AUTHORS  Jenkinsfile  LICENSE  README.md  README.rst  RMC-Jenkinsfile  conanfile.py  pyproject.toml  python-jsonconversion.pt  rmc-build.yaml  seqm.yaml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yaml
source/jsonconversion/: __init__.py  conversion.py  jsonobject.py
src/jsonconversion/: __init__.py  conversion.py  decoder.py  encoder.py  jsonobject.py
test/: test_builtins.py  test_formatting.py  test_jsonobjects.py  test_ndarray.py  test_types.py  testing_utils.py
