[project]
name = "jsonconversion"
version = "1.0.3"
description = "This python module helps converting arbitrary Python objects into JSON strings and back."
keywords = ["json", "conversion", "serialization"]
readme = "README.rst"
authors = [
    {name = "Franz Steinmetz", email = "franz.steinmetz@dlr.de"},
    {name = "Johannes Ernst", email = "j.ernst@dlr.de"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Flask",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Object Brokering",
    "Topic :: Utilities"
]
dependencies = [
    "pytest-runner>=6.0.0",
    "numpy>=1.26.0",
    "pytest>=6.0.0",
]
license = {text = "BSD"}
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/DLR-RM/python-jsonconversion"

[tool.pdm.build]
package-dir = "source"
includes = ["source/jsonconversion"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
